fix: release packages

--- a/apps/docs/src/content/index.mdx
+++ b/apps/docs/src/content/index.mdx
@@ -45,8 +45,8 @@ Satellite Connect uses Orbit as its foundation for blockchain interactions:
 
 ```mermaid
 graph TD
-A[Your dApp] --> B[Satellite Connect]
-B --> C[Orbit]
+A[Your dApp] --> B[Orbit]
+B --> C[Satellite Connect]
 C --> D[EVM Chains]
 C --> E[Solana]
 ```
